# server/documentation/openapi.json
@@ -1072,12 +1072,37 @@
 								"type": "object",
 								"properties": {
 									"title": { "type": "string" },
-									"finished": { "type": "boolean" }
+									"completed": { "type": "boolean" }
 								}
 							}
 						}
 					}
 				},
+				"responses": {
+					"200": {
+						"description": "A list of users."
+					}
+				}
+			}
+		},
+		"/missions/delete-mission/{id}": {
+			"delete": {
+				"tags": ["Mission"],
+				"summary": "Get product by id",
+				"parameters": [
+					{
+						"name": "token",
+						"in": "header",
+						"schema": { "type": "string" }
+					},
+					{
+						"name": "id",
+						"in": "path",
+						"required": true,
+						"schema": { "type": "string" }
+					}
+				],
+
 				"responses": {
 					"200": {
 						"description": "A list of users."
