# server/routers/missionRouter.js
@@ -7,6 +7,6 @@ router.post("/add-mission/:username", missionController.addNewMission);
 
 router.patch("/update-mission/:missionId", missionController.updateMission);
 
-// router.delete("/delete-mission/:id", missionController.deleteMission);
+router.delete("/delete-mission/:id", missionController.deleteMission);
 
 module.exports = router;
